@@ -177,6 +177,7 @@ public:
   BOOL_SPARSE_MAPPER (log10)
   BOOL_SPARSE_MAPPER (real)
   BOOL_SPARSE_MAPPER (round)
+  BOOL_SPARSE_MAPPER (roundb)
   BOOL_SPARSE_MAPPER (signum)
   BOOL_SPARSE_MAPPER (sin)
   BOOL_SPARSE_MAPPER (sinh)
