@@ -379,6 +379,7 @@ COMPLEX_MAPPER (log, std::log)
 COMPLEX_MAPPER (log10, std::log10)
 COMPLEX_MAPPER (real, xreal)
 COMPLEX_MAPPER (round, xround)
+COMPLEX_MAPPER (roundb, xroundb)
 COMPLEX_MAPPER (signum, ::signum)
 COMPLEX_MAPPER (sin, std::sin)
 COMPLEX_MAPPER (sinh, std::sinh)
