@@ -868,6 +868,7 @@ SPARSE_MAPPER (log, SparseComplexMatrix::cmapper, std::log)
 SPARSE_MAPPER (log10, SparseComplexMatrix::cmapper, std::log10)
 SPARSE_MAPPER (real, SparseComplexMatrix::dmapper, xreal)
 SPARSE_MAPPER (round, SparseComplexMatrix::cmapper, xround)
+SPARSE_MAPPER (roundb, SparseComplexMatrix::cmapper, xroundb)
 SPARSE_MAPPER (signum, SparseComplexMatrix::cmapper, ::signum)
 SPARSE_MAPPER (sin, SparseComplexMatrix::cmapper, std::sin)
 SPARSE_MAPPER (sinh, SparseComplexMatrix::cmapper, std::sinh)
